[gd_scene load_steps=12 format=3 uid="uid://dfj2d30ayli7l"]

[ext_resource type="Script" uid="uid://cf21vnnsxve8f" path="res://Scripts/UI/pause_menu.gd" id="1_rrvs5"]
[ext_resource type="Script" uid="uid://m354wp0ul6p4" path="res://Scripts/UI/options_menu.gd" id="2_8rf44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrvs5"]
bg_color = Color(0, 0, 0, 0.498039)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rf44"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2i2h"]
bg_color = Color(0.215902, 0.215902, 0.215902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oykix"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdnb7"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
shadow_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_702e2"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qyryt"]
color = Color(0, 0.823529, 0, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_23me3"]
color = Color(0, 1, 0, 1)
thickness = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deree"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 25
border_width_top = 15
border_width_right = 25
border_width_bottom = 15
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrvs5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.9
offset_left = 0.295959
offset_top = 0.199997
offset_right = -0.447998
offset_bottom = 0.399994
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rrvs5")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_8rf44")
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.564962, 0.564962, 0.564962, 1)
theme_override_colors/font_pressed_color = Color(0.666667, 1, 0.662745, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_r2i2h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r2i2h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r2i2h")
text = "Resume"

[node name="Options" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.564962, 0.564962, 0.564962, 1)
theme_override_colors/font_pressed_color = Color(0.666667, 1, 0.662745, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_r2i2h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r2i2h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r2i2h")
text = "Options"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.999988, 0.107065, 0.297848, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.564962, 0.564962, 0.564962, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_r2i2h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r2i2h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r2i2h")
text = "Quit to menu"

[node name="Options Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_8rf44")

[node name="PanelContainer" type="PanelContainer" parent="Options Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.117
anchor_right = 0.883
anchor_bottom = 0.883
offset_left = 0.215988
offset_top = 0.183998
offset_right = -0.216003
offset_bottom = -0.184021
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oykix")

[node name="MarginContainer" type="MarginContainer" parent="Options Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Options Menu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_kdnb7")

[node name="Music Volume" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/Music Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music Volume"

[node name="Music Volume Slider" type="HSlider" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/Music Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxLine_702e2")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_qyryt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_23me3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Music Volume Number" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/Music Volume"]
layout_mode = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX Volume" type="HBoxContainer" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/SFX Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX Volume"

[node name="SFX Volume Slider" type="HSlider" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/SFX Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxLine_702e2")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_qyryt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_23me3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX Volume Number" type="Label" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer/SFX Volume"]
layout_mode = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Fullscreen"
icon_alignment = 1

[node name="Back Button" type="Button" parent="Options Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_deree")
theme_override_styles/hover = SubResource("StyleBoxFlat_deree")
theme_override_styles/pressed = SubResource("StyleBoxFlat_deree")
theme_override_styles/normal = SubResource("StyleBoxFlat_deree")
action_mode = 0
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="value_changed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/Music Volume/Music Volume Slider" to="Options Menu" method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/SFX Volume/SFX Volume Slider" to="Options Menu" method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/CheckButton" to="Options Menu" method="_on_check_button_toggled"]
[connection signal="pressed" from="Options Menu/PanelContainer/MarginContainer/VBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
